--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body>
 	<h1 style="text-align: center;">REGISTRATION FORM</h1>
 	<form name="RegForm" action="/submit.php"
-		onsubmit="return GEEKFORGEEKS()" method="post">
+		onsubmit="return FORM()" method="post">
 		<p>Name: <input type="text"
 						size="65" name="Full Name" /></p>
 		<br />
